k8s/replicaset.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-service # Flask가 바라보는 이름
  namespace: wh
spec:
  selector:
    app: db
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
